onapoli-cluster/dev/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-p3-service
spec:
  selector:
    app: app-p3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
