onapoli-cluster/dev/ingress-configuration.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
spec:
  rules:
  - http:
      paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: app-p3-service
              port:
                number: 80
